# Netdork

./: CMakeLists.txt  README.md
ann_framework/: Net.cpp  Net.h  Neuron.cpp  Neuron.h  README.md
include/: Net.h
mnist/: CMakeLists.txt  README.md  mnist-testing.cpp  mnist-training.cpp  mnist.hpp  mnist5.csv
src/: Net.cpp  train-xorNet.cpp
test/: CMakeLists.txt  xor-test.cxx
xor/: CMakeLists.txt  README.md  xor-testing.cxx  xor-training.cpp  xor.txt
